--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h2,
+h3,
+ul,
+p {
+  margin: 0;
+  padding: 0;
+}
+
+div {
+  padding: 20px 30px;
+}
